# habs

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md
DAppNodePackage-archipel-orchestrator/: README.md
bootstrap/: .gitignore  Dockerfile  README.md  jest.config.js  package.json  services.json
bootstrap/src/: app.js  archipel.js  error.js  generate.js  join.js  main.js  service.js  substrate.js  utils.js  wireguard.js
bootstrap/src/__tests__/: main-test.js
bootstrap/src/public/config/: archipel-node-id-0  archipel-node-id-1  archipel-node-id-2  config.json  polkadot-node-id-0  polkadot-node-id-1  polkadot-node-id-2
bootstrap/src/public/css/: main.css
bootstrap/src/routes/: generate.js  join.js  main.js  services.js
bootstrap/src/views/: index.html
chain/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
chain/.devcontainer/: devcontainer.json
chain/node/: Cargo.toml
chain/node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
chain/pallets/archipel/: Cargo.toml
chain/pallets/archipel/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: archipel.rs  lib.rs
chain/runtime/wasm/: Cargo.toml  build.sh
chain/runtime/wasm/src/: lib.rs
chain/scripts/: docker_run.sh
chain/src/: chain_spec.rs  cli.rs  main.rs  service.rs
cli/: .dockerignore  .gitignore  Dockerfile  README.md  archipel.json  package.json  services.json
cli/src/: app.js  archipel.js  centrifuge.js  cli.js  generate.js  init.js  polkadot.js  service.js  substrate.js  utils.js  wireguard.js
cli/src/__tests__/: main-test.js
deployer/: .gitignore  README.md  author_insertKey.sh  buildAll.sh  launch.sh  node_status.sh  remove.sh  start-chain.sh  start-orchestrator.sh  start_chain.sh  start_orchestrator.sh  supervisord.conf
deployer/archipel/: Dockerfile  docker-compose.yml  env-zip.template  env.template  start-chain.sh  start-orchestrator.sh  start-ui.sh  start-wireguard.sh  supervisord.conf  wg-resolv-dns.sh
deployer/archipel-docker/: Dockerfile  env.template  start-chain.sh  start-orchestrator.sh  supervisord.conf
deployer/archipel-node-docker/: Dockerfile  start-node.sh
deployer/archipel-with-wireguard/: Dockerfile  env.template  start-chain.sh  start-orchestrator.sh  start-ui.sh  start-wireguard.sh  supervisord.conf
deployer/configutils/: README.md  generateNewNodeKeys.js  getIdFromNodeKey.js  package.json
deployer/test/: .gitignore  README.md  launch-with-wireguard.sh  launch.sh  remove.sh  restart-archipel.sh  restart-node.sh  stop-archipel.sh  stop-node.sh
deployer/test/archipel/: launch-config.sh  launch.sh  remove.sh
deployer/test/chain/: .gitignore  README.md  chainSpec.json  customSpec.json  customSpecRaw.json  launch.sh  remove.sh
deployer/test/chain/keys/: UILink.txt  a  key1-ed25519.txt  key1-node-key-file  key1-peer-id.txt  key1-polkadot-node-key-file  key1-polkadot-peer-id.txt  key2-ed25519.txt  key2-node-key-file  key2-peer-id.txt  key2-polkadot-node-key-file  key2-polkadot-peer-id.txt  key3-ed25519.txt  key3-node-key-file  key3-peer-id.txt  key3-polkadot-node-key-file  key3-polkadot-peer-id.txt  key3.txt  key4-ed25519.txt  key4-node-key-file  key4-peer-id.txt  key4-polkadot-node-key-file  (+2 more)
deployer/test/orchestrator/: README.md  launch.sh  remove.sh
deployer/wireguard/: Dockerfile  README.md  entrypoint.sh
doc/: README.md  archipel-federation-testing.md  archipel-keys-initialisation.md  archipel-keys-initialization.md  archipel-test-results.md  archipel-testing.md  archipel-unitary-tests.md  deployment-on-dappnodes.md  deployment-with-docker.md  keys-initialisation.md  polkadot-keys-initialisation.md  polkadot-keys-initialization.md  wireguard-keys-initialization.md
orchestrator/: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  jest.config.js  mock-key-file  package-lock.json  package.json
orchestrator/src/: api.js  apiSms.js  app.js  centrifuge.js  chain.js  config.js  docker.js  heartbeats.js  metrics.js  orchestrator.js  polkadot.js  restoredb.js  service.js  stonith.js  trustlines.js  utils.js
orchestrator/src/__tests__/: app-test.js  chain-test.js  docker-test.js  heartbeats-test.js  metrics-test.js  orchestrator-test.js  polkadot-test.js  service-test.js  test-polkadot-node-key-file
orchestrator/src/routes/: heartbeats.js  main.js  metrics.js  orchestrator.js  service.js  sms.js
orchestrator/src/services/: centrifuge.js  polkadot.js  trustlines.js
orchestrator/test/: api.js  chain.js  config.js  docker.js  heartbeats.js  mock-config.json  orchestrator.js  polkadot-config.js  polkadot.js  service.js  utils.js
ui/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  ipfsDwebUploader.js  package.json  webpack.config.js
ui/public/: index.html  manifest.json
ui/src/: App.js  ArchipelModule.js  NodesCards.jsx  Pretty.jsx  app.jsx  index.js  init.js
ui/src/config/: common.json  index.js  production.json  test.json
ui/src/libs/: fetch.js
ui/static/: index.html
(+7 files in other folders)
