[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'archipel-runtime-wasm'
version = '1.0.0'
[dependencies.archipel-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['archipel-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
